updated about me

--- a/index.html
+++ b/index.html
@@ -224,10 +224,8 @@
   <h2>About Me</h2>
   <div class="card">
     <p>
-      I am a high school student passionate about medicine, community health, and scientific discovery.
-      I am seeking opportunities to volunteer in healthcare settings and gain hands‑on experience through
-      internships in hospitals, clinics, or research labs. My long‑term goal is to pursue a career in medicine
-      and contribute to patient care and medical innovation.
+      High school student passionate about medicine, community health, and scientific discovery.
+      My long‑term goal is to pursue a career in medicine and contribute to patient care and medical innovation.
     </p>
   </div>
 </section>
