--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 <header>
   <img src="images/mypic.JPG" alt="Student Photo" class="circular-image">
   <h1>Nityasri Bhaskar</h1>
-  <p>Future Medical Professional · High School Student · Passionate about mathematics, medicine and STEM leadership</p>
+  <p>Future Medical Professional · High School Student · Passionate about mathematics, medicine and STEM leadership.</p>
 </header>
 
 <nav>
