--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 <body>
 
 <header>
-  <img src="images/mypic.JPG" alt="Student Photo" class="circular-image">
+  <img src="images/mypic2.JPG" alt="Student Photo" class="circular-image">
   <h1>Nityasri Bhaskar</h1>
   <p>Future Medical Professional · High School Student · Passionate about mathematics, medicine and STEM leadership.</p>
 </header>
