--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 <body>
 
 <header>
-  <img src="images/mypic2.JPG" alt="Student Photo" class="circular-image">
+  <img src="images/mypic.jpg" alt="Student Photo" class="circular-image">
   <h1>Nityasri Bhaskar</h1>
   <p>Future Medical Professional · High School Student · Passionate about mathematics, medicine and STEM leadership.</p>
 </header>
@@ -460,7 +460,7 @@
     <h3>Tennis Tournament Winner</h3>
     <p>Won 1st place in the Dhvani Tennis Tournament and raised money for charity.</p>
     <div class="project-images">
-      <img src="images/sports1.jpg" alt="Sports - Tennis Event">      
+      <img src="images/sports1.JPG" alt="Sports - Tennis Event">      
     </div>
   </div>
 
