--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
     </div>
 
     <div class="table-wrapper">
-      <h3>Certifications</h3>
+      <h3>Relevant Courses</h3>
       <table>
         <thead>
           <tr>
