Implement mobile menu and update achievements section
Added a mobile menu with navigation links and improved the achievements section formatting.

--- a/index.html
+++ b/index.html
@@ -520,6 +520,21 @@
  <a href="#booksiread">Literature Explored</a>
  <a href="#contributions">Contributions</a>
  </div>
+ <div class="hamburger" onclick="toggleMenu()">
+ <span></span>
+ <span></span>
+ <span></span>
+ </div>
+ </div>
+ <div id="mobileMenu" class="mobile-menu">
+ <a href="#student-leadership">Student Leadership</a>
+ <a href="#coursework">Coursework</a>
+ <a href="#achievements">Achievements</a>
+ <a href="#volunteering">Volunteering</a>
+ <a href="#extracurriculars">Extracurriculars</a>
+ <a href="#booksiread">Literature Explored</a>
+ <a href="#contributions">Contributions</a>
+ </div>
  </nav>
 
 
@@ -591,6 +606,7 @@
  </section>
 
  <section id="achievements">
+ <div class="content-wrapper">
  <h2>Achievements</h2>
 
  <div class="card">
@@ -604,7 +620,8 @@
 
  <div class="card">
  <h3>Scholar Athlete Honor Award</h3>
- <p>Awarded by Parkway Central High School for achieving a 4.286 GPA while participating in interscholastic
+ <p>Awarded by Parkway Central High School for achieving a 4.286 GPA while participating in
+ interscholastic
  Girls Tennis (2024-2025 & 2025-2026).</p>
  <div class="project-images">
  <img src="athlete_award_1769278535726.png" alt="Scholar Athlete Award"
@@ -614,8 +631,7 @@
  <span>Scholar Athlete</span><span>GPA 4.286</span><span>Varsity Tennis</span>
  </div>
  </div>
-
-
+ </div>
  </section>
 
  <section id="volunteering">
